<resources>
    <string name="app_name">Basic Note</string>
    <string name="id">Id</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="enter_title">Enter title</string>
    <string name="clear">Clear</string>
</resources>